--- a/templates/index_multi_league.html
+++ b/templates/index_multi_league.html
@@ -314,7 +314,7 @@
         <header>
             <div class="logo">⚽</div>
             <h1>Lazy Bet Invest</h1>
-            <p class="subtitle">Multi-League Edition • 17 Leagues • AI-Powered</p>
+            <p class="subtitle">Multi-League Edition • 17 Leagues • Top Model</p>
         </header>
 
         <div class="league-selector">
